<resources>
    <string name="app_name">Tampilan_Constraint_Layout</string>
    <string name="temail">E - Mail</string>
    <string name="temailh2">E - Mail : </string>
    <string name="password">Password</string>
    <string name="passwordh2">Password :</string>
    <string name="bsignin">Sign In</string>
    <string name="tsambutan">Selamat Datang</string>
    <string name="tdata">Data Anda</string>
    <string name="emailhasil">Ini hasil E-Mail</string>
    <string name="thasilpass">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan E-Mail</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="lihatdata">lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kotak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor telepon</string>
</resources>